--- a/fifth_lesson.html
+++ b/fifth_lesson.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hi everyone@@ hi try me</p>
+
+
+
+    <script src="https://unpkg.com/vue@3"></script>
+    
+    <div id="first">
+        <h1>{{ message }}</h1>
+        <h1>{{ message2 }}</h1>
+        <h1>{{ message3 }}</h1>
+
+        <input v-model="message">
+
+    </div>
+    
+    <script src="vue/vue_first.js">
+ 
+    </script>
 </body>
+
 </html> 
