--- a/vue_review.html
+++ b/vue_review.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .error{
+            font-size: 50px;
+            color:red;
+            font-size: bold;
+        }
+    </style>
 </head>
 <script src="https://unpkg.com/vue@3"></script>
 <body>
     <!-- <div id="temp"></div> -->
-    <div id="app1">
+    <!-- <div id="app1">
         <div>台幣<input type="text" v-model="twd"></div>
         <div>日幣<input type="text" v-model="jpy"></div>
 
@@ -40,8 +47,12 @@
         </select>
         <p>You picked : {{ selected }}</p>
 
+    </div> -->
+    <div id="app1">
+        <p v-text="text">nice</p>
+        <p v-html="text1">nice</p>
+        <!-- <input type="text" v-model.trim="message" placeholder="Type here" v-bind:class="{'error':message.length>=8}"> Please type this column -->
     </div>
-
 
 
 
