--- a/fourteenth_lesson_vue.html
+++ b/fourteenth_lesson_vue.html
@@ -9,7 +9,13 @@
 <script src="https://unpkg.com/vue@3"></script>
 <body>
     <div id="app1">
-        <div id="template"></div>
+        <h1>Jabez</h1>
+        <my-component></my-component>
+    </div>
+=====================================
+    <div id="app2">
+       
+        <aa-component></aa-component>
     </div>
     
 </body>
