--- a/vue_review.html
+++ b/vue_review.html
@@ -95,6 +95,15 @@
         </div>
     </div>
 
+    <div id="app6">
+        <nice-component></nice-component>
+    </div>
+
+    <div id="app7">
+
+        <seven-component></seven-component>
+    </div>
+
     <script src="vue/vue_review.js"></script>
 </body>
 
