--- a/vue_review.html
+++ b/vue_review.html
@@ -104,6 +104,9 @@
         <seven-component></seven-component>
     </div>
 
+    <div id="app8">
+        
+    </div>
     <script src="vue/vue_review.js"></script>
 </body>
 
