--- a/vue_review.html
+++ b/vue_review.html
@@ -53,7 +53,8 @@
     <div id="app1">
         <p v-text="text">nice</p>
         <p v-html="text1">nice</p>
-        <input type="text" v-model.trim="message" placeholder="Type here" v-bind:class="{'error':message.length>=8}"> Please type this column
+        <input type="text" v-model.trim="message" placeholder="Type here" v-bind:class="{'error':message.length>=8}">
+        Please type this column
     </div>
 
     <div id="app2">
@@ -99,13 +100,14 @@
         <nice-component></nice-component>
     </div>
 
+
     <div id="app7">
 
         <seven-component></seven-component>
     </div>
 
     <div id="app8">
-        
+
     </div>
     <script src="vue/vue_review.js"></script>
 </body>
