--- a/vue_review.html
+++ b/vue_review.html
@@ -105,9 +105,10 @@
 
         <seven-component></seven-component>
     </div>
-
+=================================================================
     <div id="app8">
-
+        <h1>{{content}}</h1>
+        <content-block :parent-content="content"></content-block>
     </div>
     <script src="vue/vue_review.js"></script>
 </body>
