--- a/fifteenth_lesson_vue.html
+++ b/fifteenth_lesson_vue.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>15</title>
     <style>
-        .block{
+        .block {
             border: black 1px solid;
             background-color: grey;
             color: black;
             font-size: large;
             font-weight: bolder;
         }
+        
     </style>
 </head>
 <script src="https://unpkg.com/vue@3"></script>
+
 <body>
-    
+
     <div id="app1">
         {{nice}}
     </div>
@@ -28,6 +31,22 @@
         <data-block></data-block>
         <data-block></data-block>
     </div>
+
+
+
+    <div id="app3">
+        <h1>{{message}}</h1>
+        <msg-block v-bind:parent-message="message"></msg-block>
+    </div>
+    ===================================================
+    <div id="app4">
+        <h1>Props type</h1>
+        <h1>{{number}}</h1>
+        <num-block :props-number="123"></num-block>
+    </div>
+    ===================================================
+
+
 
 
 
