--- a/sixteenth_lesson_vue.html
+++ b/sixteenth_lesson_vue.html
@@ -43,11 +43,9 @@
         <new-component :class="name" @click="greet()"></new-component>
     </div>
 
-    <div id="app3">
-
-    </div>
+   
 
 </body>
-<script src="vue/vue_sixteenth.js"></script>
+<script src="vue/vue_sixteenth.js" :data.name :data.content></script>
 
 </html>
