--- a/vue_review.html
+++ b/vue_review.html
@@ -114,6 +114,14 @@
     <div id="app9">
         <ha-component  v-for="post in posts" :key="post.id" :title="post.name"></ha-component>
     </div>
+
+    <div id="app10">
+        <ta-component :lala="msg"></ta-component>
+    </div>
+
+
+
+
     <script src="vue/vue_review.js"></script>
 </body>
 
